# daVinci-MagiHuman-mlx

./: .gitignore  README.md  pyproject.toml  weights
davinci_mlx/components/: patchifier.py  scheduler.py
davinci_mlx/kernels/: fused_ops.py
davinci_mlx/loader/: quantize.py  weight_converter.py
davinci_mlx/model/text_encoder/: encoder.py  t5_gemma.py
davinci_mlx/model/transformer/: attention.py  feed_forward.py  model.py  rope.py  transformer.py
davinci_mlx/model/turbo_vae/: __init__.py  conv3d.py  decoder.py
davinci_mlx/pipeline/: common.py  distilled.py
docs/superpowers/plans/: 2026-03-24-davinci-magihuman-mlx.md
docs/superpowers/specs/: 2026-03-24-davinci-magihuman-mlx-design.md
scripts/: download_weights.py  generate.py  quantize_weights.py
tests/: test_attention.py  test_davinci_model.py  test_feed_forward.py  test_kernels.py  test_patchifier.py  test_pipeline.py  test_quantize.py  test_rope.py  test_scheduler.py  test_text_encoder.py  test_transformer_block.py  test_turbo_vae.py  test_weight_conversion.py
